[package]
name = "measure"
version = "1.1.3"
authors = ["Pierre Wacrenier <mota@souitom.org>"]
description = "Estimate data transfer speed between two streams"
license = "MIT"
homepage = "https://github.com/mota/measure"
readme = "README.md"

[dependencies]
chrono = "0.4"

[dependencies.clap]
version = "~2.31.2"
features = ["suggestions", "color"]
